Change score class and fixed spacing

--- a/static/css/less_css/less/tba/tba_gameday.less
+++ b/static/css/less_css/less/tba/tba_gameday.less
@@ -173,7 +173,7 @@ body {
     cursor: pointer;
   }
 
-  .new{
+  .new_scores{
     background-color: #000033;
   }
   
